--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>test</title>
-    <link href="styles/main.css" rel="stylesheet">
+    <title>Indeed4Developers!</title>
+    <link href="styles/main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <p>
-      and there i was walking down the street.
-    </p>
-    <script src="scripts/test.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="vendor/angular.js" type="text/javascript"></script>
+    <script src="scripts/app.js" type="text/javascript"></script>
   </body>
 </html>
