angular set up. ready to code. added server.js file to see if node server.js will work

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Indeed4Developers!</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body ng-app="indeedForDevelopers">
     <script src="vendor/angular.js" type="text/javascript"></script>
     <script src="scripts/app.js" type="text/javascript"></script>
   </body>
