--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="styles/main.css" rel="stylesheet" type="text/css">
   </head>
   <body ng-app="indeedForDevelopers">
+
+    <hello-world></hello-world>
     <script src="vendor/angular.js" type="text/javascript"></script>
     <script src="scripts/app.js" type="text/javascript"></script>
   </body>
