--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body ng-app="indeedForDevelopers">
 
-    <hello-world></hello-world>
+    <div hello-world></div>
     <script src="vendor/angular.js" type="text/javascript"></script>
     <script src="scripts/app.js" type="text/javascript"></script>
+    <script src="scripts/hello-world.js" type="text/javascript"></script>
   </body>
 </html>
