--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="indeedForDevelopers">
+<html lang="en" ng-app="indeedForDevelopers" >
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body ng-controller="AppCtrl">
     <div class="container">
       <div class="navbar">
         <div class="navbar-inner">
           <a class="brand" href="#/">indeedForDevelopers</a>
           <ul class="nav">
-            </ul>
-          </div>
-          </div>
+          </ul>
+        </div>
+        </div>
+          <h1>Hello {{ name }}</h1>
+           <input type="text" ng-model="name">
+           <button ng-click="updateName()" class="btn">Update</button>
       </div>
 
 
@@ -23,13 +26,13 @@
 
 
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script src="vendor/angular.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 
+    <script src="scripts/controllers.js" type="text/javascript"></script>
     <script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/services.js" type="text/javascript"></script>
-    <script src="scripts/controllers.js" type="text/javascript"></script>
     <script src="scripts/filters.js" type="text/javascript"></script>
     <script src="scripts/directives.js" type="text/javascript"></script>
   </body>
