--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <!-- indeed api job roll code
+    <script type="text/javascript">
+      indeed_jobroll_title = 'Web Developer jobs';
+      indeed_jobroll_background_color = "#FFFFFF";
+      indeed_jobroll_width = "150px";
+      indeed_jobroll_text_font = "10px Arial, Helvetica, Sans serif";
+      indeed_jobroll_link_color = "#000000";
+      indeed_jobroll_border = "1px solid #000000";
+   </script>
+   <script type="text/javascript" src="http://www.indeed.com/jobroll?q=Web+Developer&l=&limit=10">
+   </script>
+   <noscript><a href="http://www.indeed.com/">Jobs</a> by Indeed</noscript> -->
+
+
+
+
+
 
 
     <script src="scripts/controllers.js" type="text/javascript"></script>
